# CompareIMGOpenCVCuda

./: .gitignore  CMakeLists.txt  README.md
src/: ContentFile.cpp  CreateBaseImg.cpp  CreateBaseImg.h  CreateImgsCompare.cpp  main.cpp
